membuat detail barang

--- a/toko_app/templates/toko_app/base.html
+++ b/toko_app/templates/toko_app/base.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="{% static 'toko_app/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'toko_app/css/select2.min.css' %}">
-    <title>Dayak</title>
+    <title> Dayak</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Dayak</a>
+            <a class="navbar-brand" href="{% url 'index' %}">Dayak</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
