--- a/toko_app/templates/toko_app/daftar.html
+++ b/toko_app/templates/toko_app/daftar.html
@@ -54,8 +54,8 @@
                 <td>Rp. {{ brg.harga }}</td>
                 <td>99x</td>
                 <td><a href="{% url 'update-barang' brg.id %}" class="btn btn-success">Update</a> 
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-id="{{ brg.id }}">
-                        Launch demo modal
+                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal" data-id="{{ brg.id }}">
+                        Hapus 
                     </button>
                    
 
@@ -64,33 +64,27 @@
     </tbody>
 </table>
 
-
-<!-- {% if page_obj.is_paginated %}
-
-    {% if page_obj.has_previous %}
-        <a href="?page=1" class="btn btn-outline-info">first</a>
-        <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-outline-info">Previous</a>
-    {% endif %}
+<div class="text-center">
+     {% if page_obj.has_previous %}
+        <a href="?page=1" class="btn btn-outline-info">Awal</a>
+        <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-outline-info">&laquo;</a>
+    {% endif %} 
 
     {% for num in page_obj.paginator.page_range %}
         {% if page_obj.number  == num %}
             <a href="?page={{ num }}" class="btn btn-info">{{ num }}</a>
-        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+        {% elif num > page_obj.number|add:'-4' and num < page_obj.number|add:'4' %}
             <a href="?page={{ num }}" class="btn btn-outline-info">{{ num }}</a>
         {% endif %}
     {% endfor %}
 
     {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}" class="btn btn-outline-info">Lirst</a>
-        <a href="?page={{ page_obj.paginator.num_pages }}" class="btn btn-outline-info">Last</a>
+        <a href="?page={{ page_obj.next_page_number }}" class="btn btn-outline-info">&raquo;</a>
+        <a href="?page={{ page_obj.paginator.num_pages }}" class="btn btn-outline-info">Akhir</a>
     {% endif %}
 
-{% endif %} -->
-
-
+</div>
 <!-- Button trigger modal -->
-
-<!-- Modal -->
 <form action="" method="POST" class="formhapus">
     {% csrf_token %}
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
