--- a/toko_app/templates/toko_app/tambah_barang.html
+++ b/toko_app/templates/toko_app/tambah_barang.html
@@ -66,7 +66,7 @@
             <div class="form-group row">
                 <div class="col-sm-10">
                     <button type="submit" class="btn btn-success">Tambah</button>
-                    <a href="" class="btn btn-danger">Batal</a>
+                    <a href="{% url 'daftar-barang' %}" class="btn btn-danger">Batal</a>
                 </div>
             </div>
         </form>
